--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Unbounded&display=swap" rel="stylesheet">
     <title>Encriptador</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/Vector.png" alt="">
+        <img class="logo-a" src="/imagenes/Vector.png" alt="">
+        <h1 class="header-titulo">ENCRYPTER</h1>
+
+        </div>
     </header>
     <main>
         <section>
