--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         <section>
-            <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
+            <textarea class="texto" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div>
-                <h6 class="informacion">Solo letras minisculas y acento</h6>
+                <h6 class="advertencia">Solo letras minisculas y acento</h6>
             </div>
             <div class="botones">
                 <button class="btn-encriptar">Encriptador</button>
@@ -31,7 +31,7 @@
         </section>
           
         <section>
-            <textarea class="mensaje" cols="20" rows="10"></textarea>
+            <textarea class="mensaje" cols="15" rows="10" placeholder="e"></textarea>
             <div>
                 <button class="copiar">Copiar</button>
             </div>
