--- a/index.html
+++ b/index.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Unbounded&display=swap" rel="stylesheet">
+    <!--CSS-->
+    <link rel="stylesheet" href="/style.css">
     <title>Encriptador</title>
 </head>
+
 <body>
     <header>
         <img class="logo-a" src="/imagenes/Vector.png" alt="">
-        <h1 class="header-titulo">ENCRYPTER</h1>
-
+        <div class="titulo">Bienvenido 
         </div>
     </header>
     <main>
         <section>
             <textarea class="texto" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div>
-                <h6 class="advertencia">Solo letras minisculas y acento</h6>
+                <h6 class="advertencia">Solo letras minisculas y acento.</h6>
             </div>
             <div class="botones">
-                <button class="btn-encriptar">Encriptador</button>
-                <button class="btn-desencriptar">Desencriptar</button>
+                <button class="btn-encriptar" onclick="btnEncriprtar()">Encriptador</button>
+                <button class="btn-desencriptar" onclick="btnDesencriprtar()">Desencriptar</button>
             </div>
         </section>
           
-        <section>
-            <textarea class="mensaje" cols="15" rows="10" placeholder="e"></textarea>
-            <div>
-                <button class="copiar">Copiar</button>
-            </div>
+        <section>   
+            <textarea class="mensaje" cols="15" rows="10" placeholder=""></textarea>
+            <button class="copiar"><h6>Copiar</h6></button>
+        </div>
+        </div>
+            
+
         </section>
     </main>
+
+<script src="/script.js"></script>
 
 </body>
 </html>
