--- a/index.html
+++ b/index.html
@@ -14,16 +14,22 @@
 </head>
 
 <body>
-    <header>
-        <img class="logo-a" src="/imagenes/Vector.png" alt="">
-        <div class="titulo">Bienvenido 
-        </div>
+    <header class="header">
+        <div>
+            <img class="logo-a" src="/imagenes/Vector.png" alt="">
+            <div>
+                <h1>Encriptador</h1>
+            </div>
+        </div>  
     </header>
+
     <main>
         <section>
-            <textarea class="texto" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
             <div>
-                <h6 class="advertencia">Solo letras minisculas y acento.</h6>
+                <textarea class="ingresetexto" cols="30" rows="10" placeholder="Ingrese el texto aquí"></textarea>
+            </div>
+            <div>
+                <h6>Solo letras minisculas y acento.</h6>
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriprtar()">Encriptador</button>
@@ -31,13 +37,13 @@
             </div>
         </section>
           
-        <section>   
-            <textarea class="mensaje" cols="15" rows="10" placeholder=""></textarea>
-            <button class="copiar"><h6>Copiar</h6></button>
-        </div>
-        </div>
-            
-
+        <section> 
+            <div>
+                <textarea class="mensaje" cols="30" rows="10" placeholder=""></textarea>
+            <div>
+                <button class="copiar">Copiar</button>
+            </div>
+            </div>
         </section>
     </main>
 
