--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.cdnfonts.com/css/mortal-kombat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Unbounded&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="/style.css">
@@ -30,6 +29,7 @@
             </div>
             <div>
                 <h6>Solo letras minisculas y acento.</h6>
+                <img class="eliminar" src="/imagenes/1.jpg" alt="">
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriprtar()">Encriptador</button>
@@ -39,7 +39,7 @@
           
         <section> 
             <div>
-                <textarea class="mensaje" cols="30" rows="10" placeholder=""></textarea>
+                <textarea class="mensaje" cols="25" rows="10" placeholder="."></textarea>
             <div>
                 <button class="copiar">Copiar</button>
             </div>
